--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -8,6 +8,7 @@
         ぜひ、たくさんの作品をご覧ください！
         </h5><br><br>
 
+    <h1 class="text-center">~Gallery~</h1><br>
     <div class="zoomIn"><a href="#"><span class="mask">
       <ul class="gallery">
         <% @exhibition.each do |exhibition|%>
