--- a/app/views/public/users/timeline.html.erb
+++ b/app/views/public/users/timeline.html.erb
@@ -1,1 +1,9 @@
-a
+<div class=" d-flex align-items-center justify-content-center pt-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8">
+          <p>time line</p>
+      </div>
+    </div>
+  </div>
+</div>
