--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -6,7 +6,14 @@
     <h5 class="text-center">人と人の繋がり、様々な作品と出会えるように<br><br>
         PhotoExhibitionはオンラインの写真展です。<br>
         ぜひ、たくさんの作品をご覧ください！
-        </h5><br><br>
+    </h5><br><br>
+    <h5 class="text-center">
+      <% if user_signed_in? %>
+        <%= link_to '作品を投稿', new_exhibition_path, class: "header-link" %>
+      <% else %>
+        <%= link_to "sign up", new_user_registration_path, class: "header-link" %>
+      <% end %>
+    </h5><br><br>
 
     <h1 class="text-center">~Gallery~</h1><br>
     <div class="zoomIn"><a href="#"><span class="mask">
