--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -9,12 +9,12 @@
     </h5><br><br>
     <h5 class="text-center">
       <% if user_signed_in? %>
-        <%= link_to '作品を投稿', new_exhibition_path, class: "header-link" %>
+        <i class="fa-solid fa-image"></i>→<%= link_to '作品を投稿する', new_exhibition_path, class: "header-link" %>
       <% else %>
         <p>※展示するには会員登録が必要です。<br>
-          <%= link_to "sign up", new_user_registration_path, class: "header-link" %></p>
+          →<%= link_to "sign up", new_user_registration_path, class: "header-link" %></p>
         <p>または、ログインしてください。<br>
-          <%= link_to "log in", new_user_session_path, class: "header-link" %></p>
+          →<%= link_to "log in", new_user_session_path, class: "header-link" %></p>
       <% end %>
     </h5><br><br>
 
