--- a/app/views/public/users/timeline.html.erb
+++ b/app/views/public/users/timeline.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8">
-        <h4 class="center">time line</h4>
+        <h4 class="text-center">time line</h4>
       </div>
     </div>
   </div>
