--- a/app/views/public/users/timeline.html.erb
+++ b/app/views/public/users/timeline.html.erb
@@ -3,6 +3,15 @@
     <div class="row">
       <div class="col-lg-8">
         <h4 class="text-center">time line</h4>
+          <div class="row justify-content-md-center">
+            <% @exhibitions.each do |exhibition| %>
+              <div class="mt-1 pb-10">
+                <%= link_to exhibition_path(exhibition.id) do %>
+                  <%= image_tag exhibition.get_image(600,600), size: "200x200" %>
+                <% end %>
+              </div>
+            <% end %>
+          </div>
       </div>
     </div>
   </div>
