グルーバルナビゲーション内にtimelineリンク追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,6 +67,9 @@
               <%= link_to 'my page', user_path(current_user.id), class: "header-link" %>
             </li>
             <li>
+              <%= link_to 'タイムライン', users_timeline_path, class: "header-link" %>
+            </li>
+            <li>
               <%= link_to '作品を投稿', new_exhibition_path, class: "header-link" %>
             </li>
             <li>
