--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -18,6 +18,10 @@
       <% end %>
     </h5><br><br>
 
+    <div class="text-center">
+      <%= link_to "ランキングを見る", exhibitions_ranking_path, class: "header-link" %>
+    </div>
+
     <h1 class="text-center">~Gallery~</h1><br>
     <div class="zoomIn"><a href="#"><span class="mask">
       <ul class="gallery">
