ランキングコントローラーとviwe更新

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -19,7 +19,7 @@
     </h5><br><br>
 
     <div class="text-center">
-      <%= link_to "ランキングを見る", exhibitions_ranking_path, class: "header-link" %>
+      <i class="fa-solid fa-ranking-star"></i><%= link_to "ランキングを見る", exhibitions_ranking_path, class: "header-link" %>
     </div>
 
     <h1 class="text-center">~Gallery~</h1><br>
