--- a/app/views/public/exhibitions/ranking.html.erb
+++ b/app/views/public/exhibitions/ranking.html.erb
@@ -1,1 +1,14 @@
-p
+<div class=" d-flex align-items-center justify-content-center pt-5">
+  <div class="container">
+    <div class="text-center">
+      <h4><i class="fa-solid fa-ranking-star"></i>ランキング</h4><br><br>
+        <div class="center">
+          <% @exhibition.first(10).each do |exhibition| %>
+            <%= link_to exhibition_path(exhibition.id) do %>
+              <%= image_tag exhibition.get_image(600,600) %><br>
+            <% end %>
+          <% end %>
+        </div>
+    </div>
+  </div>
+</div>
