--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -20,7 +20,7 @@
 
     <div class="text-center">
       <i class="fa-solid fa-ranking-star"></i><%= link_to "ランキングを見る", exhibitions_ranking_path, class: "header-link" %>
-    </div>
+    </div><br><br>
 
     <h1 class="text-center">~Gallery~</h1><br>
     <div class="zoomIn"><a href="#"><span class="mask">
