--- a/app/views/public/exhibitions/ranking.html.erb
+++ b/app/views/public/exhibitions/ranking.html.erb
@@ -1,7 +1,7 @@
 <div class=" d-flex align-items-center justify-content-center pt-5">
   <div class="container">
     <div class="text-center">
-      <h4><i class="fa-solid fa-ranking-star"></i>ランキング</h4><br><br>
+      <h4><i class="fa-solid fa-ranking-star"></i>いいね順TOP10<i class="fa-solid fa-ranking-star"></i></h4><br><br>
         <div class="center">
           <!--ランキング表示(with_index)で順位表示できる-->
           <% @exhibition.first(10).each.with_index(1) do |exhibition, i| %>
