topに展示一覧リンク追加

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -20,7 +20,8 @@
     </h5><br><br>
 
     <div class="text-center">
-      <i class="fa-solid fa-ranking-star"></i><%= link_to "ランキングを見る", exhibitions_ranking_path, class: "header-link" %>
+      <i class="fa-solid fa-ranking-star"></i><%= link_to "ランキングを見る", exhibitions_ranking_path, class: "header-link" %><br>
+      <%= link_to '展示を見る', categories_path, class: "header-link" %>
     </div><br><br>
 
     <h1 class="text-center">~Gallery~</h1><br>
