ログイン後のヘッダーにtimelineリンク追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,10 @@
           <%= link_to 'exhibitor', users_path, class: "header-link" %>
           <p class="list-text"><%= link_to '-展示者-', users_path, class: "header-link" %></p>
         </li>
+        <li class="center-list">
+          <%= link_to 'timeline', users_timeline_path, class: "header-link" %>
+          <p class="list-text"><%= link_to '-タイムライン-', users_timeline_path, class: "header-link" %></p>
+          </li>
         </ul>
         <!--グローバルナビゲーション-->
         <div class="openbtn"><span></span><span></span><span></span></div>
