--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,6 +71,9 @@
               <%= link_to 'my page', user_path(current_user.id), class: "header-link" %>
             </li>
             <li>
+            <li>
+              <%= link_to 'タイムライン', users_timeline_path, class: "header-link" %>
+            </li>
 
             </li>
             <li>
