showにコメント追加

--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -25,6 +25,15 @@
         <div id="follow_btn_<%= @user.id %>">
           <%= render "public/follow/follow", user: @user %>
         </div>
+        <!--unless @user.id == current_user.id-->
+        <!--  if @is_room == true-->
+        <!--    link_to 'メッセージを送る', room_path(@room_id)-->
+        <!--  else-->
+        <!--    form_for @room do |f|-->
+        <!--      fields_for @entry do |e|-->
+        <!--        e.hidden_field :user_id, value:@user.id-->
+        <!--      f.button type: :submit do-->
+        <!--        メッセージを送る-->
 
         <p><i class="fa-solid fa-comment"></i><br> <%= @user.profile %></p>
         <p><i class="fa-solid fa-arrow-up-right-from-square"></i><br> <%= @user.extemal_link %></p>
