--- a/app/views/public/rooms/index.html.erb
+++ b/app/views/public/rooms/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Public::Rooms#index</h1>
-<p>Find me in app/views/public/rooms/index.html.erb</p>
+<div class=" d-flex align-items-center justify-content-center pt-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8">
+        <p>〇〇さんにメッセージを送る</p>
+      </div>
+    </div>
+  </div>
+</div>
