roomのshowで名前表示

--- a/app/views/public/rooms/index.html.erb
+++ b/app/views/public/rooms/index.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8">
-        <p>〇〇さんにメッセージを送る</p>
+        <p>メッセージ一覧</p>
       </div>
     </div>
   </div>
