--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,6 +80,9 @@
               <%= link_to '作品を投稿', new_exhibition_path, class: "header-link" %>
             </li>
             <li>
+              <%= link_to 'ダイレクトメッセージ', rooms_path, class: "header-link" %>
+            </li>
+            <li>
               <%= link_to "log out", destroy_user_session_path, method: :delete, class: "header-link" %>
             </li>
           </ul>
