--- a/app/views/public/rooms/show.html.erb
+++ b/app/views/public/rooms/show.html.erb
@@ -2,7 +2,37 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8">
-        <p><%= @user.name %>さんにメッセージを送る</p>
+        <div class="text-center">
+          <p><%= @user.name %>さんにメッセージを送る</p>
+        </div>
+
+        <table class="message table">
+          <thead>
+            <tr>
+              <th style="text-align: left; font-size: 20px;"><%= current_user.name %></th>
+              <th style="text-align: right; font-size: 20px;"><%= @user.name %></th>
+            </tr>
+            </thead>
+            <% @messages.each do |message| %>
+              <% if message.user_id == current_user.id %>
+                <tbody>
+                  <tr>
+                    <th>
+                      <p style="text-align: left;"><%#= message %></p>
+                    </th>
+                    <th></th>
+                  </tr>
+              <% else %>
+                  <tr>
+                    <th></th>
+                    <th>
+                      <p style="text-align: right;"><%#= chat.message %></p>
+                    </th>
+                  </tr>
+                </tbody>
+              <% end %>
+            <% end %>
+        </table>
       </div>
     </div>
   </div>
