--- a/app/views/public/rooms/index.html.erb
+++ b/app/views/public/rooms/index.html.erb
@@ -3,6 +3,10 @@
     <div class="row">
       <div class="col-lg-8">
         <p>メッセージ一覧</p>
+        <% @rooms.each do |room| %>
+          <%# if message.user_id == current_user.id %>
+          <%# @user.name %>
+        <% end %>
       </div>
     </div>
   </div>
