ヘッダーにDMリンク追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,8 +38,10 @@
         </li>
         <li class="center-list">
           <%= link_to 'timeline', users_timeline_path, class: "header-link" %>
-          <p class="list-text"><%= link_to '-タイムライン-', users_timeline_path, class: "header-link" %></p>
-          </li>
+        </li>
+        <li class="center-list">
+          <%= link_to 'DM', rooms_path, class: "header-link" %>
+        </li>
         </ul>
         <!--グローバルナビゲーション-->
         <div class="openbtn"><span></span><span></span><span></span></div>
