timelineのユーザーリンク修正

--- a/app/views/public/users/timeline.html.erb
+++ b/app/views/public/users/timeline.html.erb
@@ -5,8 +5,10 @@
         <div class="center">
           <% @exhibitions.each do |exhibition| %>
           <i class="far fa-clock clock-icon"></i><%= time_ago_in_words(exhibition.created_at) %>前<br><br>
-            <%= image_tag exhibition.user.get_profile_image(600, 600), class: "rounded-circle", size: "50x50" %>
-            <%= exhibition.user.name %><br><br>
+            <%= link_to user_path(exhibition.user.id), class: "link" do %>
+              <%= image_tag exhibition.user.get_profile_image(600, 600), class: "rounded-circle", size: "50x50" %>
+              <%= exhibition.user.name %><br><br>
+            <% end %>
             <%= link_to exhibition_path(exhibition.id), class: "link" do %>
               <%= image_tag exhibition.get_image(600,600), size: "200x200" %><br>
               <div class="text-center">
